[package]
name = "rust-wfc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.2"
serde = {"version" = "1.0.228", "features" = ["derive"]}
serde_json = "1.0.145"
socket2 = "0.6.0"
tokio = {"version" = "1.48.0", "features" = ["full"]}
tokio-util = {"version" = "0.7.17", "features" = ["io-util"]}

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
]
